--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,146 @@
-.App {
-  text-align: center;
+body{
+  background-color:rgb(0,0,0);
+  background-repeat:no-repeat;
+  background-size: cover;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header{
+  position: fixed;
+  top: 0;
+  left:0;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width:100%;
+}
+.heading{
+  font-size: 33px;
+  font-weight:650;
+  margin-left:5%;
+  text-wrap: nowrap;
+  color: rgb(239, 88, 88);
+  opacity: 0.5;
+}
+ul{
+  align-items: center;
+  display:flex;
+  flex-direction:row;
+  gap: 50px;
+  list-style-type: none;
+  text-decoration-line: none;
+  margin-left:130%;
+
 }
 
-.App-link {
-  color: #61dafb;
+a{
+  text-decoration: none;
+  color:#ffff;
+  padding-left:10px;
+  text-wrap: nowrap;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a:hover{
+  color:rgb(239, 88, 88) ;
 }
+.slider{
+  background-repeat: no-repeat;
+  display:flex;
+  flex-direction:column ;
+  justify-content: space-between;
+  margin-left:10%;
+  margin-top:8%;
+}
+.sliderimage{
+  width:1511px;
+  height:500px;
+  margin-left:7.5px;
+  margin-top:5%;
+  background-image: url('C:\Users\ADMIN\OneDrive\Desktop\moviebooking app practise\movieapp\public\cinema.avif');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.slider img{
+  width:50%;
+  height:auto ;
+  padding-left:1%;
+  padding-top:10%;
+  filter: none;
+}
+.headerimage{
+  box-sizing: border-box;
+  border:1px solid black ;
+  padding-bottom:20px;
+
+
+}
+.headerimage img{
+  width:100%;
+  height:0%;
+
+
+}
+#planetdescr{
+  margin-top:30%;
+}
+#planetofapes{
+  border-radius: 5%;
+  transition: ;
+}
+#planetofapes:hover{
+  
+}
+h2{
+  
+  font-size: 14px;
+  font-weight: 300;
+  color:#ffff;
+}
+.kingdombook{
+  
+}
+.kingdom{
+  display: flex;
+  flex-direction: row;
+  margin-left:10%;
+ 
+
+}
+.booking{
+  padding: 3px;
+  border-radius:5%;
+  background-color: rgba(128,128,128,0.4);
+}
+.nowshowingcommingsoon{
+  display: flex;
+  flex-direction: row;
+}
+#nowshowing{
+  font-family: sans-serif;
+  font-size:18px;
+  font-weight:650;
+  color: rgba(239,88,88,0.5);
+  padding-left:15px;
+  margin-left:8px;
+  transition: transform 0.3s ease-in-out;
+}
+#nowshowing:hover{
+  transform: scale(1.15);
+  
+}
+
+.footer{
+  width: 1496px;
+  height:200px;
+background-color: rgb(49, 49, 52);
+margin-left:11px;
+margin-top:17%;
+}
+.text{
+  margin-left: 48%;
+  margin-top: 3px;
+}
+p{
+  color: rgb(239, 88, 88);
+}
+
